# Satellite-constellation-simulation

./: CMakeLists.txt  README.md  Satellite constellation simulation.slnx  Satellite constellation simulation.vcxproj
assets/: info.txt
docs/: info.txt
include/: Components.h  Simulation.h  Systems.h  info.txt
src/: Simulation.cpp  Systems.cpp  main.cpp
tests/: info.txt
